force-app/main/default/objects/Charket__WeChatMessageAttachment__c/Charket__WeChatMessageAttachment__c.object-meta.xml
<CustomObject>
    <label>WeChat Message Attachment</label>
    <nameField>
        <displayFormat>WMA-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Message Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>