force-app/main/default/objects/Charket__WeChatMessageAttachment__c/fields/Charket__CoverImageAttachmentId__c.field-meta.xml
<CustomField>
    <fullName>Charket__CoverImageAttachmentId__c</fullName>
    <label>Cover Image Attachment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>