force-app/main/default/objects/Charket__WeChatMessageAttachment__c/fields/Charket__DownloadUrl__c.field-meta.xml
<CustomField>
    <fullName>Charket__DownloadUrl__c</fullName>
    <label>Download URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>