force-app/main/default/objects/Charket__WeChatMessageAttachment__c/fields/Charket__StructuredMessageUrl__c.field-meta.xml
<CustomField>
    <fullName>Charket__StructuredMessageUrl__c</fullName>
    <inlineHelpText>The address that picture links to.</inlineHelpText>
    <label>Structured Message URL</label>
    <type>Url</type>
</CustomField>